kubernetes-manifests/text-to-speech-canary.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: text-to-speech
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: text-to-speech
    tags.datadoghq.com/version: v2
    version: v2
  name: text-to-speech-canary
  namespace: apps
spec:
  selector:
    matchLabels:
      app: text-to-speech
      version: v2
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: text-to-speech
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: text-to-speech
        tags.datadoghq.com/version: v2
        admission.datadoghq.com/enabled: "true"
        version: v2
      annotations:
        admission.datadoghq.com/python-lib.version: v2.1.2
        ad.datadoghq.com/text-to-speech-canary.logs: >-
          [{
            "source": "python",
            "service": "text-to-speech"
          }]
    spec:
      containers:
        - name: text-to-speech-canary
          image: babbili/text-to-speech-py:79931c98a
          imagePullPolicy : Always       
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
          - containerPort: 1323
          volumeMounts:
          - mountPath: "/gcsa"
            name: tts-v
      volumes:
        - name: tts-v
          persistentVolumeClaim:
            claimName: tts-pvc
      nodeSelector:
        kubernetes.io/hostname: cluster-istio-worker3
      serviceAccount: text-to-speech
      serviceAccountName: text-to-speech
