kubernetes-manifests/client.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpine
  name: alpine
  namespace: apps
spec:
  selector:
    matchLabels:
      app: alpine
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: alpine
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
        runAsGroup: 3000
        fsGroup: 2000
      containers:
        - name: alpine
          image: babbili/alpine:c6707b6eb
          command: ["/bin/sh"]
          args: ["-c", "while true; do sleep 1d;done"]
          imagePullPolicy : Always
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            privileged: false
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
          - containerPort: 5000
      serviceAccount: alpine
      serviceAccountName: alpine

---

apiVersion: v1
kind: Service
metadata:
  name: alpine
  namespace: apps
  labels:
    app: alpine
spec:
  type: ClusterIP
  selector:
    app: alpine
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
