kubernetes-manifests/text-to-speech.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: text-to-speech
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: text-to-speech
    tags.datadoghq.com/version: v1
    version: v1
  name: text-to-speech
  namespace: apps
spec:
  selector:
    matchLabels:
      app: text-to-speech
      version: v1
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: text-to-speech
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: text-to-speech
        tags.datadoghq.com/version: v1
        version: v1
      annotations:
        ad.datadoghq.com/text-to-speech.logs: >-
          [{
            "source": "go",
            "service": "text-to-speech"
          }]
    spec:
      containers:
        - name: text-to-speech
          image: babbili/text-to-speech:e3b4f2527
          imagePullPolicy : Always       
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          ports:
          - containerPort: 1323
          volumeMounts:
          - mountPath: "/gcsa"
            name: tts-go-v
          - name: apmsocketpath
            mountPath: /var/run/datadog
      volumes:
        - name: tts-go-v
          persistentVolumeClaim:
            claimName: tts-pvc
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
      nodeSelector:
        kubernetes.io/hostname: cluster-istio-worker3          
      serviceAccount: text-to-speech
      serviceAccountName: text-to-speech

---

apiVersion: v1
kind: Service
metadata:
  name: text-to-speech
  namespace: apps
  labels:
    app: text-to-speech
spec:
  type: ClusterIP
  selector:
    app: text-to-speech
  ports:
    - name: http
      port: 80
      targetPort: 1323
      protocol: TCP
