kubernetes-manifests/istio-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
    istio: ingressgateway
  ports:
  - port: 80
    # nodePort: 30000
    name: http
  - port: 443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # Select the gateway injection template (rather than the default sidecar template)
        inject.istio.io/templates: gateway
      labels:
        # Set a unique label for the gateway. This is required to ensure Gateways can select this workload
        istio: ingressgateway
        # Enable gateway injection. If connecting to a revisioned control plane, replace with "istio.io/rev: revision-name"
        sidecar.istio.io/inject: "true"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: ingress-ready
                operator: In
                values:
                - "true"
      # Allow binding to all ports (such as 80 and 443)
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      containers:
      - name: istio-proxy
        image: auto # The image will automatically update each time the pod starts.
        # Drop all privileges, allowing to run as non-root
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1337
          runAsGroup: 1337
---

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: goapi-vs
  namespace: apps
spec:
  hosts:
  - goapi.apps.svc.cluster.local
  gateways:
  - istio-system/gateway
  http:
  - route:
    - destination:
        host: goapi.apps.svc.cluster.local
        port:
          number: 80

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alpine-vs
  namespace: apps
spec:
  hosts:
  - alpine.apps.svc.cluster.local
  http:
  - route:
    - destination:
        host: alpine.apps.svc.cluster.local
        port:
          number: 5000

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: text-to-speech-vs
  namespace: apps
spec:
  hosts:
  - text-to-speech.apps.svc.cluster.local
  http:
  - route:
    - destination:
        host: text-to-speech.apps.svc.cluster.local
        port:
          number: 80
        subset: v1
      # send 70% of requests to v1 (tts-go) 
      weight: 70
    - destination:
        host: text-to-speech.apps.svc.cluster.local
        port:
          number: 80
        subset: v2
      # send 30% of requests to v2 the canary version (tts-py)
      weight: 30

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: text-to-speech-destination-rule
  namespace: apps
spec:
  host: text-to-speech.apps.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
